src/styles/fonts.css
@font-face {
	font-family: 'DM Mono';
	font-style: normal;
	font-display: swap;
	font-weight: 400;
	src: url('@fontsource/dm-mono/files/dm-mono-latin-400-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'DM Mono';
	font-style: normal;
	font-display: swap;
	font-weight: 500;
	src: url('@fontsource/dm-mono/files/dm-mono-latin-500-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'Inter';
	font-style: normal;
	font-display: swap;
	font-weight: 400;
	src: url('@fontsource/inter/files/inter-latin-400-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'Inter';
	font-style: normal;
	font-display: swap;
	font-weight: 600;
	src: url('@fontsource/inter/files/inter-latin-600-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'Inter';
	font-style: normal;
	font-display: swap;
	font-weight: 800;
	src: url('@fontsource/inter/files/inter-latin-800-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'JetBrains Mono';
	font-style: normal;
	font-display: swap;
	font-weight: 400;
	src: url('@fontsource/jetbrains-mono/files/jetbrains-mono-latin-400-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'JetBrains Mono';
	font-style: normal;
	font-display: swap;
	font-weight: 600;
	src: url('@fontsource/jetbrains-mono/files/jetbrains-mono-latin-600-normal.woff2') format('woff2');
}

@font-face {
	font-family: 'Roboto Condensed';
	font-style: normal;
	font-display: swap;
	font-weight: 400;
	src: url('@fontsource/roboto-condensed/files/roboto-condensed-latin-400-normal.woff2')
		format('woff2');
}

@font-face {
	font-family: 'Roboto Condensed';
	font-style: normal;
	font-display: swap;
	font-weight: 700;
	src: url('@fontsource/roboto-condensed/files/roboto-condensed-latin-700-normal.woff2')
		format('woff2');
}

